extra/mini-microservice/infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query # - means array
          image: pallimoon/query:latest
--- # --- means another object
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  type: ClusterIP # optional. if skipped will default to ClusterIP
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
